--- a/level1.html
+++ b/level1.html
@@ -27,7 +27,7 @@
                 <i class="fas fa-list-ul" id="list-btn"></i>
             </h2>
             <div class="play" id="play">¡GANASTE! <i class="fas fa-redo-alt" id="reloadBtn"></i></div>
-            <img src="imagenes/donde esta caricias.jpg" id="img1" alt="nivel1">
+            <img src="donde esta caricias.jpg" id="img1" alt="nivel1">
         </div>
 
         <aside class="aside" id="aside"> 
