--- a/level2.html
+++ b/level2.html
@@ -27,7 +27,7 @@
                 <i class="fas fa-list-ul" id="list-btn"></i>
             </h2>
             <div class="play" id="play">¡GANASTE! <i class="fas fa-redo-alt" id="reloadBtn"></i></div>
-            <img src="imagenes/caricias vuelve.jpg" id="img2" alt="nivel2">
+            <img src="caricias vuelve.jpg" id="img2" alt="nivel2">
         </div>
 
         <aside class="aside" id="aside"> 
