--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <ul class="flex-footer__list">
             <li>
                 <a href=https://helado-de-nada.flashcookie.com>
-                    <img src="imagenes/logo transparente.png" alt="logo">
+                    <img src="logo transparente.png" alt="logo">
                 </a>    
             </li>
             <li>
